--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,10 @@
 set(SRCS
+    regex.h
+    regex.c
+    parser.h
+    parser.c
+    state.h
+    state.c
 )
 
 target_sources(regexer PRIVATE ${SRCS})
