--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.15...3.31)
 
-project(regex_exp)
+project(regex_exp VERSION 0.0.2 DESCRIPTION "Building a regex engine for fun and learn" LANGUAGES C)
 
 add_executable(regexer)
 
@@ -9,6 +9,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
 endif()
 
 add_subdirectory(src)
+add_subdirectory(docs)
 
 set(SRCS
     test.c
